[tool.poetry]
name = "dumpyara"
version = "1.0.8"
description = "Android firmware extractor"
authors = ["Sebastiano Barezzi <seba@sebaubuntu.dev>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/sebaubuntu-python/dumpyara"

[tool.poetry.scripts]
dumpyara = 'dumpyara.main:main'

[tool.poetry.dependencies]
python = "^3.8"
Brotli = "^1.0.9"
protobuf = ">=4.22.1,<6.0.0"
sebaubuntu-libs = "^1.4.5"
liblp = "^1.0.2"
py7zr = ">=0.21,<0.23"
lz4 = "^4.3.3"
zstandard = "^0.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
